{
    "name": "TwoPlayersInputSystem",
    "maps": [
        {
            "name": "Player1",
            "id": "325dca17-9e60-428a-b08d-c23f8ec8ce15",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "3b7ba37f-48ef-4d7b-9b08-df6a0848e6c5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Movement",
                    "id": "5dd257d9-a110-4df4-b4a6-d5d817c9f58a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3c22594f-fc6f-4608-b56c-bd4e5ea78cd3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "WASD and Arrows",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1613cd04-7ecd-4177-af9b-1c28d5b21bc2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "WASD and Arrows",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c9772141-4c34-46d7-95b2-d880130e9110",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "WASD and Arrows",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3248b75f-9395-45a9-b978-c4e225b178e5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "WASD and Arrows",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Player2",
            "id": "e26bcc55-26bf-49cf-a78c-045eb5c8ea4f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "2714ee51-f8b0-4623-9f03-037b6379c943",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Movement",
                    "id": "373ad211-66a4-412c-bdf7-ab37eeacfa7f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b0df29fa-335e-4ad0-9f87-ae80b68d471a",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "WASD and Arrows",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f70da6ee-509a-4262-8e2c-e5a7699d7856",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "WASD and Arrows",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0a71b2c5-c028-4d36-8866-7adf188d23bc",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "WASD and Arrows",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "41045f27-b3d0-412f-86c9-ad42a8d007ae",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "WASD and Arrows",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "WASD and Arrows",
            "bindingGroup": "WASD and Arrows",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}